--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,15 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/thumb_db
     username: root
     password: root
+  data:
+    # Redis 配置
+    redis:
+      database: 0
+      host: 127.0.0.1
+#      password: xxx
+      timeout: 5000
+      port: 6379
+
 knife4j:
   enable: true
   setting:
