消息队列pulsar实现异步化

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,9 @@ spring:
 #      password: xxx
       timeout: 5000
       port: 6379
+  pulsar:
+    client:
+      service-url: pulsar://43.138.147.173:6650
 
 knife4j:
   enable: true
