--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
             <version>3.1.8</version>
         </dependency>
 
+        <!-- 引入 spring-pulsar -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-pulsar</artifactId>
+        </dependency>
+
 
     </dependencies>
 
